- Package strict route now requires minimum structural byte-size evidence for `.msix` beyond manifest-only ZIP structure, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.deb` beyond required AR entry names, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.exe` beyond valid PE header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.msi` beyond valid CFB header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.appimage` beyond valid runtime marker bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.rpm` beyond lead/header marker bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now fails closed on partial ZIP/AR metadata even when required structure markers are present, preventing mixed valid/corrupt package acceptance.
- Package strict route now requires canonical ZIP marker paths for `.msix/.nupkg/.whl` structure checks, preventing nested lookalike marker paths from passing explicit package routing.
- Package strict route now requires unique required-marker cardinality for `.msix/.nupkg/.whl/.jar` ZIP structures, preventing duplicate/ambiguous required-marker sets from passing explicit package routing.
- Package strict route now evaluates raw ZIP entry catalogs for required-marker cardinality, preventing duplicate same-path required markers from being hidden by ZIP-entry deduplication in explicit package routing.
- Archive/package tar coverage expanded: