@@ -1202,6 +1202,21 @@ const run = (): void => {
 
   {
     const tmp = mkTmp();
+    const deb = path.join(tmp, "duplicate_structure.deb");
+    writeSimpleAr(deb, [
+      { name: "debian-binary", bytes: Buffer.from("2.0\n", "utf8") },
+      { name: "debian-binary", bytes: Buffer.from("2.0\n", "utf8") },
+      { name: "control.tar.gz", bytes: Buffer.from("fake-control-".repeat(24), "utf8") },
+      { name: "data.tar.xz", bytes: Buffer.from("fake-data-".repeat(24), "utf8") },
+    ]);
+    const capture = captureTreeV0(deb, limits);
+    const res = runArtifactAdapterV1({ selection: "package", enabledPlugins: [], inputPath: deb, capture });
+    assert(!res.ok, "package adapter should fail closed for deb with duplicate required structure entries");
+    assertEq(res.failCode, "PACKAGE_FORMAT_MISMATCH", "expected PACKAGE_FORMAT_MISMATCH for duplicate deb structure entries");
+  }
+
+  {
+    const tmp = mkTmp();
     const deb = path.join(tmp, "tiny_stub.deb");
     writeSimpleAr(deb, [
       { name: "debian-binary", bytes: Buffer.from("2.0\n", "utf8") },
