@@ -32,6 +32,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Nested lookalike ZIP markers no longer satisfy strict package routing.
 - Strict package ZIP structure now enforces unique required-marker cardinality for `.msix`, `.nupkg`, `.whl`, and `.jar`.
 - Strict package ZIP marker cardinality now evaluates raw ZIP entry catalogs, so duplicate same-path required markers fail closed.
+- Strict `.deb` structure checks now require non-ambiguous required-entry cardinality (duplicate required structure entries fail strict routing).
 
 ### Archive strict-route hardening
 - Strict `.zip` and `.tar` archive routes now require non-ambiguous entry paths (duplicate entry paths fail strict routing).
